fix: Fix for extra space added after underline (#1234)

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -471,6 +471,10 @@ main .mainmenu .rightsection .table.no-header.cards.withimages.height-300 table 
     width: 170px;
 }
 
+.table.fixed-img-300 img{
+    width: 300px;
+}
+
 .table.col-odd-15 table tbody tr {
     td:nth-child(odd) {
         width: 15%;
